# platformer

./: .gitignore  CMakeLists.txt  LICENSE.txt  platformerConfig.cmake.in  platformerPackageCPackConfig.cmake.in  readme.md
platformer/: platformer.cmake
platformer/default_platforms/Windows/: platform.cmake
platformer/default_platforms/Windows/resources/application/: app.manifest.in  app.rc.in  resource.h.in
platformer/default_platforms/Windows/resources/application_package/: CPackConfig.cmake.in
platformer/resources/: build.hpp.in  unrecognized_platform.cmake
platformer/resources/cmake_package/: CMakePackageConfig.cmake.in  CPackConfig.cmake.in
platformer/resources/shared_library/: api.hpp.in
